# proteingen

./: .gitignore  .pi-sessions  404.html  AGENTS.md  DESIGN.md  PLAN.md  README.md  TODO.md  WORKLOG.md  index.html  mkdocs.yml  objects.inv  proteinguide-userguide-high-level-draft.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
AGENTS/: index.html
af3-server/: README.md  af3_server.def  client.py  example.py  launch.sh  server.py  test_server.sh
assets/javascripts/: mermaid-init.js
assets/stylesheets/: extra.css
contributing/: add_generative_model.md  add_predictive_model.md  index.html
docs/: AGENTS.md  benchmark-model-families.md  contributing.md  examples.md  index.md  models.md  setup.md
docs/examples/: autoregressive-generation.md  benchmark-model-families.md  finetune-esm3-mlm.md  finetune-inverse-folding.md  index.md  likelihood-curves.md  pca-embedding-init.md  stability-guided-generation.md  structure-conditioned-sampling.md  trpb-linear-probe.md  unconditional-sampling.md
docs/models/: dplm2.md  esm-forge-api.md  esm3.md  esmc.md  frame2seq.md  index.md  progen3.md  proteinmpnn.md  stability-pmpnn.md
docs/overrides/: main.html
docs/reference/: data.md  design-philosophy.md  evaluation.md  generative_modeling.md  guide.md  models.md  predictive_modeling.md  probability_model.md  sampling.md
docs/workflows/: continued-pretraining.md  data-splits.md  finetune-generative.md  index.md  likelihood-curves.md  msa-acquisition.md  msa-to-dataset.md  pbrr-walkthrough.md  protein-guide.md  stability-guidance.md  training-predictors.md
examples/: AGENTS.md  autoregressive_generation.py  conditional_scoring.py  esm3_structure_conditioned_sampling.py  index.html  pca_embedding_init.py  trpb_likelihood_curves.py  trpb_linear_probe.py  unconditional_sampling.py
examples/autoregressive-generation/: index.html
examples/benchmark-model-families/: index.html
examples/benchmark_model_families/: README.md  analyze.py  config.py  fold.py  generate.py  prepare_data.py
examples/creilov/: oracle.py
examples/finetune-esm3-mlm/: index.html
examples/finetune-inverse-folding/: index.html
examples/finetune_esm3/: 7KPM_atom37_295.pt  finetune_esm3_ephb1.py  finetune_inverse_folding.py  fold_msa_domains.py
examples/likelihood-curves/: index.html
examples/original_stability_guidance/: example_usage.py  guidance_utils.py  predictor_model.py
examples/pbrr_walkthrough/: .gitignore  README.md  data_utils.py  step1_finetune_esmc.py  step2_train_predictors.py  step3_guided_generation.py
examples/pca-embedding-init/: index.html
examples/stability-guided-generation/: index.html
examples/stability_guidance/: compare_legacy_sampler.py  main.py
examples/structure-conditioned-sampling/: index.html
examples/trpb-linear-probe/: index.html
examples/unconditional-sampling/: index.html
models/: index.html
models/dplm2/: index.html
models/esm-forge-api/: index.html
models/esm3/: index.html
models/esmc/: index.html
models/frame2seq/: index.html
models/progen3/: index.html
models/proteinmpnn/: index.html
models/stability-pmpnn/: index.html
reference/data/: index.html
reference/design-philosophy/: index.html
reference/evaluation/: index.html
reference/generative_modeling/: index.html
reference/guide/: index.html
reference/models/: index.html
reference/predictive_modeling/: index.html
reference/probability_model/: index.html
reference/sampling/: index.html
scripts/: compute_varpos_embeddings.py  trpb_guidance_experiment.py
search/: search_index.json
setup/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/contributing/: index.html
site/examples/: index.html
site/models/: index.html
site/search/: search_index.json
site/setup/: index.html
site/workflows/: index.html
src/dfm/: __init__.py  generative_modeling.py  guide.py  predictive_modeling.py  (+2 more)
tests/: AGENTS.md  test_dplm2.py  test_embedding_mlp.py  test_esm.py  test_esm3.py  test_esm_api.py  test_esmc_lora.py  test_frame2seq.py  test_generative_model.py  test_guidance_data.py  test_likelihood_curves.py  test_logit_formatter.py  test_lora.py  test_pca_embed_init.py  test_progen3.py  test_protein_mpnn.py  test_sampling.py  test_tag_projection.py  test_transition_model.py  test_xgboost_predictor.py
workflows/: index.html
(+161 files in other folders)
