[project]
name = "proteingen"
version = "0.1.0"
description = "Everything you need for training, sampling from, and guiding discrete sequence models in research. We support using them as part of discrete flow matching, discrete diffusion, any-order autoregressive, or masked language models. You can also do basic training and sampling for both conditional and unconditional models."
readme = "README.md"
authors = [
    { name = "Ishan Gaur", email = "ishang@berkeley.edu" }
]
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "rc-foundry[all]",
    "torch",
    "matplotlib",
    "numpy",
    "pandas",
    "wandb>=0.25.0",
    "python-lsp-server>=1.14.0",
    "transformers<4.48.2",
    "esm>=3.2.3",
    "datasets>=2.14.4",
    "peft>=0.13.0",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
