[project]
name = "proteingen"
version = "0.1.0"
description = "Everything you need for training, sampling from, and guiding discrete sequence models in research. We support using them as part of discrete flow matching, discrete diffusion, any-order autoregressive, or masked language models. You can also do basic training and sampling for both conditional and unconditional models."
readme = "README.md"
authors = [
    { name = "Ishan Gaur", email = "ishang@berkeley.edu" }
]
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "torch",
    "matplotlib",
    "numpy",
    "pandas",
    "wandb>=0.25.0",
    "python-lsp-server>=1.14.0",
    "transformers<4.48.2",
    "esm>=3.2.3",
    "datasets>=2.14.4",
    "peft>=0.13.0",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "tmtools>=0.3.0",
    "rc-foundry>=0.1.11",
    "mkdocs-liveedit",
    "frame2seq>=0.0.8",
]

[project.optional-dependencies]
pmpnn = ["rc-foundry[all]"]
progen3 = ["progen3"]
af3 = ["af3-server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
dev-pmpnn = [
    "rc-foundry[all]",
]
dev-progen3 = [
    "progen3",
]
dev-af3 = [
    "af3-server",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
    [
        { extra = "pmpnn" },
        { extra = "progen3" },
    ],
    [
        { group = "dev-pmpnn" },
        { extra = "progen3" },
    ],
    [
        { group = "dev-pmpnn" },
        { group = "dev-progen3" },
    ],
    [
        { extra = "pmpnn" },
        { group = "dev-progen3" },
    ],
]

[tool.uv.sources]
mkdocs-liveedit = { git = "https://github.com/ishan-gaur/mkdocs-liveedit.git" }
af3-server = { git = "https://github.com/ishan-gaur/af3-server.git" }
progen3 = { git = "https://github.com/Profluent-AI/progen3.git" }
